mm/memory: Use exception ip to search exception tables (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3753,6 +3753,7 @@
 	patches.kernel.org/6.6.18-049-nouveau-svm-fix-kvcalloc-argument-order.patch
 	patches.kernel.org/6.6.18-050-MIPS-Add-memory-clobber-to-csum_ipv6_magic-inl.patch
 	patches.kernel.org/6.6.18-051-ptrace-Introduce-exception_ip-arch-hook.patch
+	patches.kernel.org/6.6.18-052-mm-memory-Use-exception-ip-to-search-exception.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
