--- a/series.conf
+++ b/series.conf
@@ -3706,6 +3706,7 @@
 	patches.kernel.org/6.6.18-002-update-workarounds-for-gcc-asm-goto-issue.patch
 	patches.kernel.org/6.6.18-003-btrfs-add-and-use-helper-to-check-if-block-gro.patch
 	patches.kernel.org/6.6.18-004-btrfs-do-not-delete-unused-block-group-if-it-m.patch
+	patches.kernel.org/6.6.18-005-btrfs-forbid-creating-subvol-qgroups.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
