ALSA: hda/cs8409: Suppress vmaster control for Dolphin models (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3842,6 +3842,7 @@
 	patches.kernel.org/6.6.18-138-ALSA-hda-realtek-Enable-headset-mic-on-Vaio-VJ.patch
 	patches.kernel.org/6.6.18-139-ALSA-hda-realtek-Add-speaker-pin-verbtable-for.patch
 	patches.kernel.org/6.6.18-140-ASoC-codecs-wcd938x-handle-deferred-probe.patch
+	patches.kernel.org/6.6.18-141-ALSA-hda-cs8409-Suppress-vmaster-control-for-D.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
