--- a/series.conf
+++ b/series.conf
@@ -3962,6 +3962,7 @@
 	patches.kernel.org/6.6.18-258-Revert-eventfs-Check-for-NULL-ef-in-eventfs_se.patch
 	patches.kernel.org/6.6.18-259-Revert-eventfs-Use-simple_recursive_removal-to.patch
 	patches.kernel.org/6.6.18-260-Revert-eventfs-Delete-eventfs_inode-when-the-l.patch
+	patches.kernel.org/6.6.18-261-Revert-eventfs-Save-ownership-and-mode.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
