net: ethernet: ti: cpsw_new: enable mac_managed_pm to fix mdio (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3935,6 +3935,7 @@
 	patches.kernel.org/6.6.18-231-fs-relax-mount_setattr-permission-checks.patch
 	patches.kernel.org/6.6.18-232-net-ethernet-ti-cpsw-enable-mac_managed_pm-to-.patch
 	patches.kernel.org/6.6.18-233-s390-qeth-Fix-potential-loss-of-L3-IP-in-case-.patch
+	patches.kernel.org/6.6.18-234-net-ethernet-ti-cpsw_new-enable-mac_managed_pm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
