btrfs: reject encoded write if inode has nodatasum flag set (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3711,6 +3711,7 @@
 	patches.kernel.org/6.6.18-007-btrfs-forbid-deleting-live-subvol-qgroup.patch
 	patches.kernel.org/6.6.18-008-btrfs-send-return-EOPNOTSUPP-on-unknown-flags.patch
 	patches.kernel.org/6.6.18-009-btrfs-don-t-reserve-space-for-checksums-when-w.patch
+	patches.kernel.org/6.6.18-010-btrfs-reject-encoded-write-if-inode-has-nodata.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
