dm-crypt, dm-verity: disable tasklets (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3766,6 +3766,7 @@
 	patches.kernel.org/6.6.18-062-selftests-mm-fix-map_hugetlb-failure-on-64K-pa.patch
 	patches.kernel.org/6.6.18-063-scsi-storvsc-Fix-ring-buffer-size-calculation.patch
 	patches.kernel.org/6.6.18-064-nouveau-offload-fence-uevents-work-to-workqueu.patch
+	patches.kernel.org/6.6.18-065-dm-crypt-dm-verity-disable-tasklets.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
