--- a/series.conf
+++ b/series.conf
@@ -3995,6 +3995,7 @@
 	patches.kernel.org/6.6.18-291-eventfs-Remove-lookup-parameter-from-create_di.patch
 	patches.kernel.org/6.6.18-292-eventfs-Stop-using-dcache_readdir-for-getdents.patch
 	patches.kernel.org/6.6.18-293-tracefs-eventfs-Use-root-and-instance-inodes-a.patch
+	patches.kernel.org/6.6.18-294-eventfs-Have-eventfs_iterate-stop-immediately-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
