eventfs: Delete eventfs_inode when the last dentry is freed (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3978,6 +3978,7 @@
 	patches.kernel.org/6.6.18-274-eventfs-Test-for-ei-is_freed-when-accessing-ei.patch
 	patches.kernel.org/6.6.18-275-eventfs-Save-ownership-and-mode.patch
 	patches.kernel.org/6.6.18-276-eventfs-Hold-eventfs_mutex-when-calling-callba.patch
+	patches.kernel.org/6.6.18-277-eventfs-Delete-eventfs_inode-when-the-last-den.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
