--- a/series.conf
+++ b/series.conf
@@ -3952,6 +3952,7 @@
 	patches.kernel.org/6.6.18-248-pmdomain-core-Move-the-unused-cleanup-to-a-_sy.patch
 	patches.kernel.org/6.6.18-249-fs-proc-do_task_stat-move-thread_group_cputime.patch
 	patches.kernel.org/6.6.18-250-tracing-Fix-HAVE_DYNAMIC_FTRACE_WITH_REGS-ifde.patch
+	patches.kernel.org/6.6.18-251-tracing-Inform-kmemleak-of-saved_cmdlines-allo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
