--- a/series.conf
+++ b/series.conf
@@ -3983,6 +3983,7 @@
 	patches.kernel.org/6.6.18-279-eventfs-Use-simple_recursive_removal-to-clean-.patch
 	patches.kernel.org/6.6.18-280-eventfs-Remove-expectation-that-ei-is_freed-me.patch
 	patches.kernel.org/6.6.18-281-eventfs-Do-not-invalidate-dentry-in-create_fil.patch
+	patches.kernel.org/6.6.18-282-eventfs-Use-GFP_NOFS-for-allocation-when-event.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
