--- a/series.conf
+++ b/series.conf
@@ -4022,6 +4022,7 @@
 	patches.kernel.org/6.6.18-318-x86-boot-Remove-the-bugger-off-message.patch
 	patches.kernel.org/6.6.18-319-x86-boot-Omit-compression-buffer-from-PE-COFF-.patch
 	patches.kernel.org/6.6.18-320-x86-boot-Drop-redundant-code-setting-the-root-.patch
+	patches.kernel.org/6.6.18-321-x86-boot-Drop-references-to-startup_64.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
