eventfs: Shortcut eventfs_iterate() by skipping entries already read (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3998,6 +3998,7 @@
 	patches.kernel.org/6.6.18-294-eventfs-Have-eventfs_iterate-stop-immediately-.patch
 	patches.kernel.org/6.6.18-295-eventfs-Do-ctx-pos-update-for-all-iterations-i.patch
 	patches.kernel.org/6.6.18-296-eventfs-Read-ei-entries-before-ei-children-in-.patch
+	patches.kernel.org/6.6.18-297-eventfs-Shortcut-eventfs_iterate-by-skipping-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
