--- a/series.conf
+++ b/series.conf
@@ -3986,6 +3986,7 @@
 	patches.kernel.org/6.6.18-282-eventfs-Use-GFP_NOFS-for-allocation-when-event.patch
 	patches.kernel.org/6.6.18-283-eventfs-Move-taking-of-inode_lock-into-dcache_.patch
 	patches.kernel.org/6.6.18-284-eventfs-Do-not-allow-NULL-parent-to-eventfs_st.patch
+	patches.kernel.org/6.6.18-285-eventfs-Make-sure-that-parent-d_inode-is-locke.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
