parisc: Fix random data corruption from exception handler (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3957,6 +3957,7 @@
 	patches.kernel.org/6.6.18-253-block-fix-partial-zone-append-completion-handl.patch
 	patches.kernel.org/6.6.18-254-netfilter-ipset-fix-performance-regression-in-.patch
 	patches.kernel.org/6.6.18-255-netfilter-ipset-Missing-gc-cancellations-fixed.patch
+	patches.kernel.org/6.6.18-256-parisc-Fix-random-data-corruption-from-excepti.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
