--- a/series.conf
+++ b/series.conf
@@ -3736,6 +3736,7 @@
 	patches.kernel.org/6.6.18-032-selftests-forwarding-Fix-layer-2-miss-test-fla.patch
 	patches.kernel.org/6.6.18-033-selftests-forwarding-Fix-bridge-MDB-test-flaki.patch
 	patches.kernel.org/6.6.18-034-selftests-bridge_mdb-Use-MDB-get-instead-of-du.patch
+	patches.kernel.org/6.6.18-035-selftests-forwarding-Suppress-grep-warnings.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
