docs: kernel_feat.py: fix build error for missing files (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3944,6 +3944,7 @@
 	patches.kernel.org/6.6.18-240-mm-hugetlb-pages-should-not-be-reserved-by-shm.patch
 	patches.kernel.org/6.6.18-241-LoongArch-Fix-earlycon-parameter-if-KASAN-enab.patch
 	patches.kernel.org/6.6.18-242-blk-wbt-Fix-detection-of-dirty-throttled-tasks.patch
+	patches.kernel.org/6.6.18-243-docs-kernel_feat.py-fix-build-error-for-missin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
