--- a/series.conf
+++ b/series.conf
@@ -3823,6 +3823,7 @@
 	patches.kernel.org/6.6.18-119-Revert-drm-msm-gpu-Push-gpu-lock-down-past-run.patch
 	patches.kernel.org/6.6.18-120-connector-cn_proc-revert-connector-Fix-proc_ev.patch
 	patches.kernel.org/6.6.18-121-drm-virtio-Set-segment-size-for-virtio_gpu-dev.patch
+	patches.kernel.org/6.6.18-122-drm-amdgpu-Reset-IH-OVERFLOW_CLEAR-bit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
