--- a/series.conf
+++ b/series.conf
@@ -3775,6 +3775,7 @@
 	patches.kernel.org/6.6.18-071-HID-bpf-actually-free-hdev-memory-after-attach.patch
 	patches.kernel.org/6.6.18-072-HID-i2c-hid-of-fix-NULL-deref-on-failed-power-.patch
 	patches.kernel.org/6.6.18-073-HID-wacom-generic-Avoid-reporting-a-serial-of-.patch
+	patches.kernel.org/6.6.18-074-HID-wacom-Do-not-register-input-devices-until-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
