selftests/mm: ksm_tests should only MADV_HUGEPAGE valid memory (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3757,6 +3757,7 @@
 	patches.kernel.org/6.6.18-053-i40e-Do-not-allow-untrusted-VF-to-remove-admin.patch
 	patches.kernel.org/6.6.18-054-i40e-Fix-waiting-for-queues-of-all-VSIs-to-be-.patch
 	patches.kernel.org/6.6.18-055-userfaultfd-fix-mmap_changing-checking-in-mfil.patch
+	patches.kernel.org/6.6.18-056-selftests-mm-ksm_tests-should-only-MADV_HUGEPA.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
