--- a/series.conf
+++ b/series.conf
@@ -3767,6 +3767,7 @@
 	patches.kernel.org/6.6.18-063-scsi-storvsc-Fix-ring-buffer-size-calculation.patch
 	patches.kernel.org/6.6.18-064-nouveau-offload-fence-uevents-work-to-workqueu.patch
 	patches.kernel.org/6.6.18-065-dm-crypt-dm-verity-disable-tasklets.patch
+	patches.kernel.org/6.6.18-066-ASoC-amd-yc-Add-DMI-quirk-for-MSI-Bravo-15-C7V.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
