iio: magnetometer: rm3100: add boundary check for the value read from RM3100_REG_TMRC (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3856,6 +3856,7 @@
 	patches.kernel.org/6.6.18-152-tracing-probes-Fix-to-search-structure-fields-.patch
 	patches.kernel.org/6.6.18-153-Revert-workqueue-Override-implicit-ordered-att.patch
 	patches.kernel.org/6.6.18-154-staging-iio-ad5933-fix-type-mismatch-regressio.patch
+	patches.kernel.org/6.6.18-155-iio-magnetometer-rm3100-add-boundary-check-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
