--- a/series.conf
+++ b/series.conf
@@ -3945,6 +3945,7 @@
 	patches.kernel.org/6.6.18-241-LoongArch-Fix-earlycon-parameter-if-KASAN-enab.patch
 	patches.kernel.org/6.6.18-242-blk-wbt-Fix-detection-of-dirty-throttled-tasks.patch
 	patches.kernel.org/6.6.18-243-docs-kernel_feat.py-fix-build-error-for-missin.patch
+	patches.kernel.org/6.6.18-244-of-property-fix-typo-in-io-channels.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
