nfp: flower: fix hardware offload for the transfer layer port (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3878,6 +3878,7 @@
 	patches.kernel.org/6.6.18-174-ring-buffer-Clean-ring_buffer_poll_wait-error-.patch
 	patches.kernel.org/6.6.18-175-net-dsa-mv88e6xxx-Fix-failed-probe-due-to-unsu.patch
 	patches.kernel.org/6.6.18-176-nfp-flower-add-hardware-offload-check-for-post.patch
+	patches.kernel.org/6.6.18-177-nfp-flower-fix-hardware-offload-for-the-transf.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
