--- a/series.conf
+++ b/series.conf
@@ -3801,6 +3801,7 @@
 	patches.kernel.org/6.6.18-097-irqchip-loongson-eiointc-Use-correct-struct-ty.patch
 	patches.kernel.org/6.6.18-098-irqchip-gic-v3-its-Handle-non-coherent-GICv4-r.patch
 	patches.kernel.org/6.6.18-099-powerpc-kasan-Limit-KASAN-thread-size-increase.patch
+	patches.kernel.org/6.6.18-100-i2c-pasemi-split-driver-into-two-separate-modu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
