- Linux 6.6.18 (bsc#1218260) and blacklist.conf

--- a/series.conf
+++ b/series.conf
@@ -4040,6 +4040,7 @@
 	patches.kernel.org/6.6.18-336-Documentation-arch-ia64-features.rst-fix-kerne.patch
 	patches.kernel.org/6.6.18-337-tracing-Make-system_callback-function-static.patch
 	patches.kernel.org/6.6.18-338-tracing-Fix-a-NULL-vs-IS_ERR-bug-in-event_subs.patch
+	patches.kernel.org/6.6.18-339-Linux-6.6.18.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
