--- a/series.conf
+++ b/series.conf
@@ -4036,6 +4036,7 @@
 	patches.kernel.org/6.6.18-332-of-property-Add-in-ports-out-ports-support-to-.patch
 	patches.kernel.org/6.6.18-333-nilfs2-fix-potential-bug-in-end_buffer_async_w.patch
 	patches.kernel.org/6.6.18-334-dm-limit-the-number-of-targets-and-parameter-s.patch
+	patches.kernel.org/6.6.18-335-x86-barrier-Do-not-serialize-MSR-accesses-on-A.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
