net: tls: fix returned read length with async decrypt (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3746,6 +3746,7 @@
 	patches.kernel.org/6.6.18-042-tls-fix-race-between-tx-work-scheduling-and-so.patch
 	patches.kernel.org/6.6.18-043-net-tls-handle-backlogging-of-crypto-requests.patch
 	patches.kernel.org/6.6.18-044-net-tls-fix-use-after-free-with-partial-reads-.patch
+	patches.kernel.org/6.6.18-045-net-tls-fix-returned-read-length-with-async-de.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
