--- a/series.conf
+++ b/series.conf
@@ -4002,6 +4002,7 @@
 	patches.kernel.org/6.6.18-298-eventfs-Have-the-inodes-all-for-files-and-dire.patch
 	patches.kernel.org/6.6.18-299-eventfs-Do-not-create-dentries-nor-inodes-in-i.patch
 	patches.kernel.org/6.6.18-300-eventfs-Use-kcalloc-instead-of-kzalloc.patch
+	patches.kernel.org/6.6.18-301-eventfs-Save-directory-inodes-in-the-eventfs_i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
