nfp: flower: prevent re-adding mac index for bonded port (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3905,6 +3905,7 @@
 	patches.kernel.org/6.6.18-201-crypto-algif_hash-Remove-bogus-SGL-free-on-zer.patch
 	patches.kernel.org/6.6.18-202-nfp-use-correct-macro-for-LengthSelect-in-BAR-.patch
 	patches.kernel.org/6.6.18-203-nfp-enable-NETDEV_XDP_ACT_REDIRECT-feature-fla.patch
+	patches.kernel.org/6.6.18-204-nfp-flower-prevent-re-adding-mac-index-for-bon.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
