--- a/series.conf
+++ b/series.conf
@@ -3865,6 +3865,7 @@
 	patches.kernel.org/6.6.18-161-iio-imu-bno055-serdev-requires-REGMAP.patch
 	patches.kernel.org/6.6.18-162-iio-pressure-bmp280-Add-missing-bmp085-to-SPI-.patch
 	patches.kernel.org/6.6.18-163-pmdomain-mediatek-fix-race-conditions-with-gen.patch
+	patches.kernel.org/6.6.18-164-media-rc-bpf-attach-detach-requires-write-perm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
