--- a/series.conf
+++ b/series.conf
@@ -3837,6 +3837,7 @@
 	patches.kernel.org/6.6.18-133-xen-netback-properly-sync-TX-responses.patch
 	patches.kernel.org/6.6.18-134-um-Fix-adding-no-pie-for-clang.patch
 	patches.kernel.org/6.6.18-135-linux-init-remove-__memexit-annotations.patch
+	patches.kernel.org/6.6.18-136-modpost-Add-.ltext-and-.ltext.-to-TEXT_SECTION.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
