--- a/series.conf
+++ b/series.conf
@@ -3894,6 +3894,7 @@
 	patches.kernel.org/6.6.18-190-KVM-x86-make-KVM_REQ_NMI-request-iff-NMI-pendi.patch
 	patches.kernel.org/6.6.18-191-KVM-x86-pmu-Fix-type-length-error-when-reading.patch
 	patches.kernel.org/6.6.18-192-x86-mm-ident_map-Use-gbpages-only-where-full-G.patch
+	patches.kernel.org/6.6.18-193-io_uring-net-fix-multishot-accept-overflow-han.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
