--- a/series.conf
+++ b/series.conf
@@ -3713,6 +3713,7 @@
 	patches.kernel.org/6.6.18-009-btrfs-don-t-reserve-space-for-checksums-when-w.patch
 	patches.kernel.org/6.6.18-010-btrfs-reject-encoded-write-if-inode-has-nodata.patch
 	patches.kernel.org/6.6.18-011-btrfs-don-t-drop-extent_map-for-free-space-ino.patch
+	patches.kernel.org/6.6.18-012-driver-core-Fix-device_link_flag_is_sync_state.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
