HID: bpf: actually free hdev memory after attaching a HID-BPF program (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3772,6 +3772,7 @@
 	patches.kernel.org/6.6.18-068-ALSA-hda-realtek-Fix-the-external-mic-not-bein.patch
 	patches.kernel.org/6.6.18-069-ALSA-hda-realtek-Enable-Mute-LED-on-HP-Laptop-.patch
 	patches.kernel.org/6.6.18-070-HID-bpf-remove-double-fdget.patch
+	patches.kernel.org/6.6.18-071-HID-bpf-actually-free-hdev-memory-after-attach.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
