--- a/series.conf
+++ b/series.conf
@@ -3740,6 +3740,7 @@
 	patches.kernel.org/6.6.18-036-selftests-forwarding-Fix-bridge-locked-port-te.patch
 	patches.kernel.org/6.6.18-037-net-openvswitch-limit-the-number-of-recursions.patch
 	patches.kernel.org/6.6.18-038-lan966x-Fix-crash-when-adding-interface-under-.patch
+	patches.kernel.org/6.6.18-039-tls-extract-context-alloc-initialization-out-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
