ALSA: hda/realtek: Enable headset mic on Vaio VJFE-ADL (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3839,6 +3839,7 @@
 	patches.kernel.org/6.6.18-135-linux-init-remove-__memexit-annotations.patch
 	patches.kernel.org/6.6.18-136-modpost-Add-.ltext-and-.ltext.-to-TEXT_SECTION.patch
 	patches.kernel.org/6.6.18-137-usb-typec-tpcm-Fix-issues-with-power-being-rem.patch
+	patches.kernel.org/6.6.18-138-ALSA-hda-realtek-Enable-headset-mic-on-Vaio-VJ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
