mmc: sdhci-pci-o2micro: Fix a warm reboot issue that disk can't be detected by BIOS (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3918,6 +3918,7 @@
 	patches.kernel.org/6.6.18-214-smb-Fix-regression-in-writes-when-non-standard.patch
 	patches.kernel.org/6.6.18-215-KVM-arm64-Fix-circular-locking-dependency.patch
 	patches.kernel.org/6.6.18-216-zonefs-Improve-error-handling.patch
+	patches.kernel.org/6.6.18-217-mmc-sdhci-pci-o2micro-Fix-a-warm-reboot-issue-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
