--- a/series.conf
+++ b/series.conf
@@ -3973,6 +3973,7 @@
 	patches.kernel.org/6.6.18-269-eventfs-Fix-typo-in-eventfs_inode-union-commen.patch
 	patches.kernel.org/6.6.18-270-eventfs-Remove-extra-dget-in-eventfs_create_ev.patch
 	patches.kernel.org/6.6.18-271-eventfs-Fix-kerneldoc-of-eventfs_remove_rec.patch
+	patches.kernel.org/6.6.18-272-eventfs-Remove-is_freed-union-with-rcu-head.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
