--- a/series.conf
+++ b/series.conf
@@ -3926,6 +3926,7 @@
 	patches.kernel.org/6.6.18-222-ASoC-amd-yc-Add-DMI-quirk-for-Lenovo-Ideapad-P.patch
 	patches.kernel.org/6.6.18-223-tools-rv-Fix-curr_reactor-uninitialized-variab.patch
 	patches.kernel.org/6.6.18-224-tools-rv-Fix-Makefile-compiler-options-for-cla.patch
+	patches.kernel.org/6.6.18-225-tools-rtla-Remove-unused-sched_getattr-functio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
