--- a/series.conf
+++ b/series.conf
@@ -3844,6 +3844,7 @@
 	patches.kernel.org/6.6.18-140-ASoC-codecs-wcd938x-handle-deferred-probe.patch
 	patches.kernel.org/6.6.18-141-ALSA-hda-cs8409-Suppress-vmaster-control-for-D.patch
 	patches.kernel.org/6.6.18-142-ALSA-hda-realtek-fix-mute-micmute-LEDs-for-HP-.patch
+	patches.kernel.org/6.6.18-143-binder-signal-epoll-threads-of-self-work.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
