--- a/series.conf
+++ b/series.conf
@@ -3943,6 +3943,7 @@
 	patches.kernel.org/6.6.18-239-fs-hugetlb-fix-NULL-pointer-dereference-in-hug.patch
 	patches.kernel.org/6.6.18-240-mm-hugetlb-pages-should-not-be-reserved-by-shm.patch
 	patches.kernel.org/6.6.18-241-LoongArch-Fix-earlycon-parameter-if-KASAN-enab.patch
+	patches.kernel.org/6.6.18-242-blk-wbt-Fix-detection-of-dirty-throttled-tasks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
