eventfs: Fix typo in eventfs_inode union comment (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3970,6 +3970,7 @@
 	patches.kernel.org/6.6.18-266-eventfs-Fix-failure-path-in-eventfs_create_eve.patch
 	patches.kernel.org/6.6.18-267-tracefs-eventfs-Modify-mismatched-function-nam.patch
 	patches.kernel.org/6.6.18-268-eventfs-Fix-WARN_ON-in-create_file_dentry.patch
+	patches.kernel.org/6.6.18-269-eventfs-Fix-typo-in-eventfs_inode-union-commen.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
