iio: pressure: bmp280: Add missing bmp085 to SPI id table (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3863,6 +3863,7 @@
 	patches.kernel.org/6.6.18-159-iio-adc-ad_sigma_delta-ensure-proper-DMA-align.patch
 	patches.kernel.org/6.6.18-160-iio-imu-adis-ensure-proper-DMA-alignment.patch
 	patches.kernel.org/6.6.18-161-iio-imu-bno055-serdev-requires-REGMAP.patch
+	patches.kernel.org/6.6.18-162-iio-pressure-bmp280-Add-missing-bmp085-to-SPI-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
