USB: hub: check for alternate port before enabling A_ALT_HNP_SUPPORT (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3780,6 +3780,7 @@
 	patches.kernel.org/6.6.18-076-usb-ucsi-Add-missing-ppm_lock.patch
 	patches.kernel.org/6.6.18-077-usb-ulpi-Fix-debugfs-directory-leak.patch
 	patches.kernel.org/6.6.18-078-usb-ucsi_acpi-Fix-command-completion-handling.patch
+	patches.kernel.org/6.6.18-079-USB-hub-check-for-alternate-port-before-enabli.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
