selftests/net: convert test_bridge_backup_port.sh to run it in unique namespace (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3731,6 +3731,7 @@
 	patches.kernel.org/6.6.18-027-of-property-Improve-finding-the-supplier-of-a-.patch
 	patches.kernel.org/6.6.18-028-ALSA-hda-cs35l56-select-intended-config-FW_CS_.patch
 	patches.kernel.org/6.6.18-029-perf-CXL-fix-mismatched-cpmu-event-opcode.patch
+	patches.kernel.org/6.6.18-030-selftests-net-convert-test_bridge_backup_port..patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
