--- a/series.conf
+++ b/series.conf
@@ -3911,6 +3911,7 @@
 	patches.kernel.org/6.6.18-207-wifi-mac80211-reload-info-pointer-in-ieee80211.patch
 	patches.kernel.org/6.6.18-208-wifi-iwlwifi-mvm-fix-a-crash-when-we-run-out-o.patch
 	patches.kernel.org/6.6.18-209-irqchip-irq-brcmstb-l2-Add-write-memory-barrie.patch
+	patches.kernel.org/6.6.18-210-irqchip-gic-v3-its-Restore-quirk-probing-for-A.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
