usb: dwc3: gadget: Fix NULL pointer dereference in dwc3_gadget_suspend (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3784,6 +3784,7 @@
 	patches.kernel.org/6.6.18-080-usb-f_mass_storage-forbid-async-queue-when-shu.patch
 	patches.kernel.org/6.6.18-081-usb-chipidea-core-handle-power-lost-in-workque.patch
 	patches.kernel.org/6.6.18-082-usb-core-Prevent-null-pointer-dereference-in-u.patch
+	patches.kernel.org/6.6.18-083-usb-dwc3-gadget-Fix-NULL-pointer-dereference-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
