wifi: mac80211: reload info pointer in ieee80211_tx_dequeue() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3908,6 +3908,7 @@
 	patches.kernel.org/6.6.18-204-nfp-flower-prevent-re-adding-mac-index-for-bon.patch
 	patches.kernel.org/6.6.18-205-wifi-iwlwifi-fix-double-free-bug.patch
 	patches.kernel.org/6.6.18-206-wifi-cfg80211-fix-wiphy-delayed-work-queueing.patch
+	patches.kernel.org/6.6.18-207-wifi-mac80211-reload-info-pointer-in-ieee80211.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
