--- a/series.conf
+++ b/series.conf
@@ -3804,6 +3804,7 @@
 	patches.kernel.org/6.6.18-100-i2c-pasemi-split-driver-into-two-separate-modu.patch
 	patches.kernel.org/6.6.18-101-i2c-i801-Fix-block-process-call-transactions.patch
 	patches.kernel.org/6.6.18-102-modpost-trim-leading-spaces-when-processing-so.patch
+	patches.kernel.org/6.6.18-103-kallsyms-ignore-ARMv4-thunks-along-with-others.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
