--- a/series.conf
+++ b/series.conf
@@ -4028,6 +4028,7 @@
 	patches.kernel.org/6.6.18-324-x86-boot-Define-setup-size-in-linker-script.patch
 	patches.kernel.org/6.6.18-325-x86-boot-Derive-file-size-from-_edata-symbol.patch
 	patches.kernel.org/6.6.18-326-x86-boot-Construct-PE-COFF-.text-section-from-.patch
+	patches.kernel.org/6.6.18-327-x86-boot-Drop-PE-COFF-.reloc-section.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
