--- a/series.conf
+++ b/series.conf
@@ -3838,6 +3838,7 @@
 	patches.kernel.org/6.6.18-134-um-Fix-adding-no-pie-for-clang.patch
 	patches.kernel.org/6.6.18-135-linux-init-remove-__memexit-annotations.patch
 	patches.kernel.org/6.6.18-136-modpost-Add-.ltext-and-.ltext.-to-TEXT_SECTION.patch
+	patches.kernel.org/6.6.18-137-usb-typec-tpcm-Fix-issues-with-power-being-rem.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
