eventfs: Remove extra dget() in eventfs_create_events_dir() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3971,6 +3971,7 @@
 	patches.kernel.org/6.6.18-267-tracefs-eventfs-Modify-mismatched-function-nam.patch
 	patches.kernel.org/6.6.18-268-eventfs-Fix-WARN_ON-in-create_file_dentry.patch
 	patches.kernel.org/6.6.18-269-eventfs-Fix-typo-in-eventfs_inode-union-commen.patch
+	patches.kernel.org/6.6.18-270-eventfs-Remove-extra-dget-in-eventfs_create_ev.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
