ftrace: Fix DIRECT_CALLS to use SAVE_REGS by default (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3883,6 +3883,7 @@
 	patches.kernel.org/6.6.18-179-serial-max310x-improve-crystal-stable-clock-de.patch
 	patches.kernel.org/6.6.18-180-serial-max310x-fail-probe-if-clock-crystal-is-.patch
 	patches.kernel.org/6.6.18-181-serial-max310x-prevent-infinite-while-loop-in-.patch
+	patches.kernel.org/6.6.18-182-ftrace-Fix-DIRECT_CALLS-to-use-SAVE_REGS-by-de.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
