--- a/series.conf
+++ b/series.conf
@@ -3755,6 +3755,7 @@
 	patches.kernel.org/6.6.18-051-ptrace-Introduce-exception_ip-arch-hook.patch
 	patches.kernel.org/6.6.18-052-mm-memory-Use-exception-ip-to-search-exception.patch
 	patches.kernel.org/6.6.18-053-i40e-Do-not-allow-untrusted-VF-to-remove-admin.patch
+	patches.kernel.org/6.6.18-054-i40e-Fix-waiting-for-queues-of-all-VSIs-to-be-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
