--- a/series.conf
+++ b/series.conf
@@ -3830,6 +3830,7 @@
 	patches.kernel.org/6.6.18-126-firewire-core-correct-documentation-of-fw_csr_.patch
 	patches.kernel.org/6.6.18-127-ALSA-hda-realtek-Apply-headset-jack-quirk-for-.patch
 	patches.kernel.org/6.6.18-128-kbuild-Fix-changing-ELF-file-type-for-output-o.patch
+	patches.kernel.org/6.6.18-129-nfc-nci-free-rx_data_reassembly-skb-on-NCI-dev.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
