nilfs2: fix hang in nilfs_lookup_dirty_data_buffers() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3900,6 +3900,7 @@
 	patches.kernel.org/6.6.18-196-ALSA-hda-conexant-Add-quirk-for-SWS-JS201D.patch
 	patches.kernel.org/6.6.18-197-ALSA-hda-realtek-add-IDs-for-Dell-dual-spk-pla.patch
 	patches.kernel.org/6.6.18-198-nilfs2-fix-data-corruption-in-dsync-block-reco.patch
+	patches.kernel.org/6.6.18-199-nilfs2-fix-hang-in-nilfs_lookup_dirty_data_buf.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
