btrfs: add and use helper to check if block group is used (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3704,6 +3704,7 @@
 	patches.kernel.org/af_unix-Fix-task-hung-while-purging-oob_skb-in-GC.patch
 	patches.kernel.org/6.6.18-001-work-around-gcc-bugs-with-asm-goto-with-output.patch
 	patches.kernel.org/6.6.18-002-update-workarounds-for-gcc-asm-goto-issue.patch
+	patches.kernel.org/6.6.18-003-btrfs-add-and-use-helper-to-check-if-block-gro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
