--- a/series.conf
+++ b/series.conf
@@ -3877,6 +3877,7 @@
 	patches.kernel.org/6.6.18-173-hv_netvsc-Fix-race-condition-between-netvsc_pr.patch
 	patches.kernel.org/6.6.18-174-ring-buffer-Clean-ring_buffer_poll_wait-error-.patch
 	patches.kernel.org/6.6.18-175-net-dsa-mv88e6xxx-Fix-failed-probe-due-to-unsu.patch
+	patches.kernel.org/6.6.18-176-nfp-flower-add-hardware-offload-check-for-post.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
