--- a/series.conf
+++ b/series.conf
@@ -3964,6 +3964,7 @@
 	patches.kernel.org/6.6.18-260-Revert-eventfs-Delete-eventfs_inode-when-the-l.patch
 	patches.kernel.org/6.6.18-261-Revert-eventfs-Save-ownership-and-mode.patch
 	patches.kernel.org/6.6.18-262-Revert-eventfs-Remove-is_freed-union-with-rcu-.patch
+	patches.kernel.org/6.6.18-263-eventfs-Remove-eventfs_file-and-just-use-event.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
