--- a/series.conf
+++ b/series.conf
@@ -3932,6 +3932,7 @@
 	patches.kernel.org/6.6.18-228-tools-rtla-Exit-with-EXIT_SUCCESS-when-help-is.patch
 	patches.kernel.org/6.6.18-229-tools-rtla-Fix-uninitialized-bucket-data-bucke.patch
 	patches.kernel.org/6.6.18-230-tools-rtla-Fix-Makefile-compiler-options-for-c.patch
+	patches.kernel.org/6.6.18-231-fs-relax-mount_setattr-permission-checks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
