--- a/series.conf
+++ b/series.conf
@@ -3892,6 +3892,7 @@
 	patches.kernel.org/6.6.18-188-x86-Kconfig-Transmeta-Crusoe-is-CPU-family-5-n.patch
 	patches.kernel.org/6.6.18-189-x86-fpu-Stop-relying-on-userspace-for-info-to-.patch
 	patches.kernel.org/6.6.18-190-KVM-x86-make-KVM_REQ_NMI-request-iff-NMI-pendi.patch
+	patches.kernel.org/6.6.18-191-KVM-x86-pmu-Fix-type-length-error-when-reading.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
