usb: chipidea: core: handle power lost in workqueue (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3782,6 +3782,7 @@
 	patches.kernel.org/6.6.18-078-usb-ucsi_acpi-Fix-command-completion-handling.patch
 	patches.kernel.org/6.6.18-079-USB-hub-check-for-alternate-port-before-enabli.patch
 	patches.kernel.org/6.6.18-080-usb-f_mass_storage-forbid-async-queue-when-shu.patch
+	patches.kernel.org/6.6.18-081-usb-chipidea-core-handle-power-lost-in-workque.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
