--- a/series.conf
+++ b/series.conf
@@ -4016,6 +4016,7 @@
 	patches.kernel.org/6.6.18-312-eventfs-Remove-fsnotify-functions-from-lookup.patch
 	patches.kernel.org/6.6.18-313-eventfs-Keep-all-directory-links-at-1.patch
 	patches.kernel.org/6.6.18-314-nfsd-don-t-take-fi_lock-in-nfsd_break_deleg_cb.patch
+	patches.kernel.org/6.6.18-315-x86-efi-Drop-EFI-stub-.bss-from-.data-section.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
