--- a/series.conf
+++ b/series.conf
@@ -3826,6 +3826,7 @@
 	patches.kernel.org/6.6.18-122-drm-amdgpu-Reset-IH-OVERFLOW_CLEAR-bit.patch
 	patches.kernel.org/6.6.18-123-drm-amd-Don-t-init-MEC2-firmware-when-it-fails.patch
 	patches.kernel.org/6.6.18-124-lsm-fix-default-return-value-of-the-socket_get.patch
+	patches.kernel.org/6.6.18-125-lsm-fix-the-logic-in-security_inode_getsecctx.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
