drm/msm: Wire up tlb ops (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3867,6 +3867,7 @@
 	patches.kernel.org/6.6.18-163-pmdomain-mediatek-fix-race-conditions-with-gen.patch
 	patches.kernel.org/6.6.18-164-media-rc-bpf-attach-detach-requires-write-perm.patch
 	patches.kernel.org/6.6.18-165-ksmbd-free-aux-buffer-if-ksmbd_iov_pin_rsp_rea.patch
+	patches.kernel.org/6.6.18-166-drm-msm-Wire-up-tlb-ops.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
