tracefs: Check for dentry->d_inode exists in set_gid() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3990,6 +3990,7 @@
 	patches.kernel.org/6.6.18-286-eventfs-Fix-events-beyond-NAME_MAX-blocking-ta.patch
 	patches.kernel.org/6.6.18-287-eventfs-Have-event-files-and-directories-defau.patch
 	patches.kernel.org/6.6.18-288-eventfs-Fix-file-and-directory-uid-and-gid-own.patch
+	patches.kernel.org/6.6.18-289-tracefs-Check-for-dentry-d_inode-exists-in-set.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
