KVM: selftests: Avoid infinite loop in hyperv_features when invtsc is missing (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3716,6 +3716,7 @@
 	patches.kernel.org/6.6.18-012-driver-core-Fix-device_link_flag_is_sync_state.patch
 	patches.kernel.org/6.6.18-013-selftests-landlock-Fix-fs_test-build-with-old-.patch
 	patches.kernel.org/6.6.18-014-KVM-selftests-Delete-superfluous-unused-stage-.patch
+	patches.kernel.org/6.6.18-015-KVM-selftests-Avoid-infinite-loop-in-hyperv_fe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
