--- a/series.conf
+++ b/series.conf
@@ -3880,6 +3880,7 @@
 	patches.kernel.org/6.6.18-176-nfp-flower-add-hardware-offload-check-for-post.patch
 	patches.kernel.org/6.6.18-177-nfp-flower-fix-hardware-offload-for-the-transf.patch
 	patches.kernel.org/6.6.18-178-serial-max310x-set-default-value-when-reading-.patch
+	patches.kernel.org/6.6.18-179-serial-max310x-improve-crystal-stable-clock-de.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
