scsi: Revert "scsi: fcoe: Fix potential deadlock on &fip->ctlr_lock" (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3818,6 +3818,7 @@
 	patches.kernel.org/6.6.18-114-mptcp-really-cope-with-fastopen-race.patch
 	patches.kernel.org/6.6.18-115-Revert-powerpc-pseries-iommu-Fix-iommu-initial.patch
 	patches.kernel.org/6.6.18-116-media-Revert-media-rkisp1-Drop-IRQF_SHARED.patch
+	patches.kernel.org/6.6.18-117-scsi-Revert-scsi-fcoe-Fix-potential-deadlock-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
