--- a/series.conf
+++ b/series.conf
@@ -4020,6 +4020,7 @@
 	patches.kernel.org/6.6.18-316-x86-efi-Disregard-setup-header-of-loaded-image.patch
 	patches.kernel.org/6.6.18-317-x86-efi-Drop-alignment-flags-from-PE-section-h.patch
 	patches.kernel.org/6.6.18-318-x86-boot-Remove-the-bugger-off-message.patch
+	patches.kernel.org/6.6.18-319-x86-boot-Omit-compression-buffer-from-PE-COFF-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
