--- a/series.conf
+++ b/series.conf
@@ -3955,6 +3955,7 @@
 	patches.kernel.org/6.6.18-251-tracing-Inform-kmemleak-of-saved_cmdlines-allo.patch
 	patches.kernel.org/6.6.18-252-md-bypass-block-throttle-for-superblock-update.patch
 	patches.kernel.org/6.6.18-253-block-fix-partial-zone-append-completion-handl.patch
+	patches.kernel.org/6.6.18-254-netfilter-ipset-fix-performance-regression-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
