Documentation/arch/ia64/features.rst: fix kernel-feat directive (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -4037,6 +4037,7 @@
 	patches.kernel.org/6.6.18-333-nilfs2-fix-potential-bug-in-end_buffer_async_w.patch
 	patches.kernel.org/6.6.18-334-dm-limit-the-number-of-targets-and-parameter-s.patch
 	patches.kernel.org/6.6.18-335-x86-barrier-Do-not-serialize-MSR-accesses-on-A.patch
+	patches.kernel.org/6.6.18-336-Documentation-arch-ia64-features.rst-fix-kerne.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
