eventfs: Do not allow NULL parent to eventfs_start_creating() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3985,6 +3985,7 @@
 	patches.kernel.org/6.6.18-281-eventfs-Do-not-invalidate-dentry-in-create_fil.patch
 	patches.kernel.org/6.6.18-282-eventfs-Use-GFP_NOFS-for-allocation-when-event.patch
 	patches.kernel.org/6.6.18-283-eventfs-Move-taking-of-inode_lock-into-dcache_.patch
+	patches.kernel.org/6.6.18-284-eventfs-Do-not-allow-NULL-parent-to-eventfs_st.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
