tracing/timerlat: Move hrtimer_init to timerlat_fd open() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3848,6 +3848,7 @@
 	patches.kernel.org/6.6.18-144-misc-fastrpc-Mark-all-sessions-as-invalid-in-c.patch
 	patches.kernel.org/6.6.18-145-ext4-fix-double-free-of-blocks-due-to-wrong-ex.patch
 	patches.kernel.org/6.6.18-146-ext4-avoid-bb_free-and-bb_fragments-inconsiste.patch
+	patches.kernel.org/6.6.18-147-tracing-timerlat-Move-hrtimer_init-to-timerlat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
