thunderbolt: Fix setting the CNS bit in ROUTER_CS_5 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3913,6 +3913,7 @@
 	patches.kernel.org/6.6.18-209-irqchip-irq-brcmstb-l2-Add-write-memory-barrie.patch
 	patches.kernel.org/6.6.18-210-irqchip-gic-v3-its-Restore-quirk-probing-for-A.patch
 	patches.kernel.org/6.6.18-211-irqchip-gic-v3-its-Fix-GICv4.1-VPE-affinity-up.patch
+	patches.kernel.org/6.6.18-212-thunderbolt-Fix-setting-the-CNS-bit-in-ROUTER_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
