of: property: Improve finding the supplier of a remote-endpoint property (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3728,6 +3728,7 @@
 	patches.kernel.org/6.6.18-024-bonding-do-not-report-NETDEV_XDP_ACT_XSK_ZEROC.patch
 	patches.kernel.org/6.6.18-025-devlink-Fix-command-annotation-documentation.patch
 	patches.kernel.org/6.6.18-026-of-property-Improve-finding-the-consumer-of-a-.patch
+	patches.kernel.org/6.6.18-027-of-property-Improve-finding-the-supplier-of-a-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
