--- a/series.conf
+++ b/series.conf
@@ -3790,6 +3790,7 @@
 	patches.kernel.org/6.6.18-086-media-ir_toy-fix-a-memleak-in-irtoy_tx.patch
 	patches.kernel.org/6.6.18-087-driver-core-fw_devlink-Improve-detection-of-ov.patch
 	patches.kernel.org/6.6.18-088-powerpc-pseries-iommu-Fix-iommu-initialisation.patch
+	patches.kernel.org/6.6.18-089-powerpc-6xx-set-High-BAT-Enable-flag-on-G2_LE-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
