--- a/series.conf
+++ b/series.conf
@@ -3783,6 +3783,7 @@
 	patches.kernel.org/6.6.18-079-USB-hub-check-for-alternate-port-before-enabli.patch
 	patches.kernel.org/6.6.18-080-usb-f_mass_storage-forbid-async-queue-when-shu.patch
 	patches.kernel.org/6.6.18-081-usb-chipidea-core-handle-power-lost-in-workque.patch
+	patches.kernel.org/6.6.18-082-usb-core-Prevent-null-pointer-dereference-in-u.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
