tracing/synthetic: Fix trace_string() return value (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3850,6 +3850,7 @@
 	patches.kernel.org/6.6.18-146-ext4-avoid-bb_free-and-bb_fragments-inconsiste.patch
 	patches.kernel.org/6.6.18-147-tracing-timerlat-Move-hrtimer_init-to-timerlat.patch
 	patches.kernel.org/6.6.18-148-tracing-Fix-wasted-memory-in-saved_cmdlines-lo.patch
+	patches.kernel.org/6.6.18-149-tracing-synthetic-Fix-trace_string-return-valu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
