eventfs: Use kcalloc() instead of kzalloc() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -4001,6 +4001,7 @@
 	patches.kernel.org/6.6.18-297-eventfs-Shortcut-eventfs_iterate-by-skipping-e.patch
 	patches.kernel.org/6.6.18-298-eventfs-Have-the-inodes-all-for-files-and-dire.patch
 	patches.kernel.org/6.6.18-299-eventfs-Do-not-create-dentries-nor-inodes-in-i.patch
+	patches.kernel.org/6.6.18-300-eventfs-Use-kcalloc-instead-of-kzalloc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
