--- a/series.conf
+++ b/series.conf
@@ -3914,6 +3914,7 @@
 	patches.kernel.org/6.6.18-210-irqchip-gic-v3-its-Restore-quirk-probing-for-A.patch
 	patches.kernel.org/6.6.18-211-irqchip-gic-v3-its-Fix-GICv4.1-VPE-affinity-up.patch
 	patches.kernel.org/6.6.18-212-thunderbolt-Fix-setting-the-CNS-bit-in-ROUTER_.patch
+	patches.kernel.org/6.6.18-213-smb-client-set-correct-id-uid-and-cruid-for-mu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
