of: unittest: Fix compile in the non-dynamic case (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3717,6 +3717,7 @@
 	patches.kernel.org/6.6.18-013-selftests-landlock-Fix-fs_test-build-with-old-.patch
 	patches.kernel.org/6.6.18-014-KVM-selftests-Delete-superfluous-unused-stage-.patch
 	patches.kernel.org/6.6.18-015-KVM-selftests-Avoid-infinite-loop-in-hyperv_fe.patch
+	patches.kernel.org/6.6.18-016-of-unittest-Fix-compile-in-the-non-dynamic-cas.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
