Revert "eventfs: Use simple_recursive_removal() to clean up dentries" (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3960,6 +3960,7 @@
 	patches.kernel.org/6.6.18-256-parisc-Fix-random-data-corruption-from-excepti.patch
 	patches.kernel.org/6.6.18-257-Revert-eventfs-Do-not-allow-NULL-parent-to-eve.patch
 	patches.kernel.org/6.6.18-258-Revert-eventfs-Check-for-NULL-ef-in-eventfs_se.patch
+	patches.kernel.org/6.6.18-259-Revert-eventfs-Use-simple_recursive_removal-to.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
