--- a/series.conf
+++ b/series.conf
@@ -3921,6 +3921,7 @@
 	patches.kernel.org/6.6.18-217-mmc-sdhci-pci-o2micro-Fix-a-warm-reboot-issue-.patch
 	patches.kernel.org/6.6.18-218-arm64-signal-Don-t-assume-that-TIF_SVE-means-w.patch
 	patches.kernel.org/6.6.18-219-arm64-Subscribe-Microsoft-Azure-Cobalt-100-to-.patch
+	patches.kernel.org/6.6.18-220-ASoC-SOF-IPC3-fix-message-bounds-on-ipc-ops.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
