--- a/series.conf
+++ b/series.conf
@@ -3743,6 +3743,7 @@
 	patches.kernel.org/6.6.18-039-tls-extract-context-alloc-initialization-out-o.patch
 	patches.kernel.org/6.6.18-040-net-tls-factor-out-tls_-crypt_async_wait.patch
 	patches.kernel.org/6.6.18-041-tls-fix-race-between-async-notify-and-socket-c.patch
+	patches.kernel.org/6.6.18-042-tls-fix-race-between-tx-work-scheduling-and-so.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
