drm/msm/gem: Fix double resv lock aquire (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3718,6 +3718,7 @@
 	patches.kernel.org/6.6.18-014-KVM-selftests-Delete-superfluous-unused-stage-.patch
 	patches.kernel.org/6.6.18-015-KVM-selftests-Avoid-infinite-loop-in-hyperv_fe.patch
 	patches.kernel.org/6.6.18-016-of-unittest-Fix-compile-in-the-non-dynamic-cas.patch
+	patches.kernel.org/6.6.18-017-drm-msm-gem-Fix-double-resv-lock-aquire.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
