ALSA: hda/realtek: Apply headset jack quirk for non-bass alc287 thinkpads (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3828,6 +3828,7 @@
 	patches.kernel.org/6.6.18-124-lsm-fix-default-return-value-of-the-socket_get.patch
 	patches.kernel.org/6.6.18-125-lsm-fix-the-logic-in-security_inode_getsecctx.patch
 	patches.kernel.org/6.6.18-126-firewire-core-correct-documentation-of-fw_csr_.patch
+	patches.kernel.org/6.6.18-127-ALSA-hda-realtek-Apply-headset-jack-quirk-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
