--- a/series.conf
+++ b/series.conf
@@ -4012,6 +4012,7 @@
 	patches.kernel.org/6.6.18-308-eventfs-Clean-up-dentry-ops-and-add-revalidate.patch
 	patches.kernel.org/6.6.18-309-eventfs-Get-rid-of-dentry-pointers-without-ref.patch
 	patches.kernel.org/6.6.18-310-eventfs-Warn-if-an-eventfs_inode-is-freed-with.patch
+	patches.kernel.org/6.6.18-311-eventfs-Restructure-eventfs_inode-structure-to.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
