--- a/series.conf
+++ b/series.conf
@@ -4014,6 +4014,7 @@
 	patches.kernel.org/6.6.18-310-eventfs-Warn-if-an-eventfs_inode-is-freed-with.patch
 	patches.kernel.org/6.6.18-311-eventfs-Restructure-eventfs_inode-structure-to.patch
 	patches.kernel.org/6.6.18-312-eventfs-Remove-fsnotify-functions-from-lookup.patch
+	patches.kernel.org/6.6.18-313-eventfs-Keep-all-directory-links-at-1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
