drm/amdgpu/soc21: update VCN 4 max HEVC encoding resolution (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3870,6 +3870,7 @@
 	patches.kernel.org/6.6.18-166-drm-msm-Wire-up-tlb-ops.patch
 	patches.kernel.org/6.6.18-167-drm-amd-display-Add-align-done-check.patch
 	patches.kernel.org/6.6.18-168-drm-prime-Support-page-array-4GB.patch
+	patches.kernel.org/6.6.18-169-drm-amdgpu-soc21-update-VCN-4-max-HEVC-encodin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
