--- a/series.conf
+++ b/series.conf
@@ -3715,6 +3715,7 @@
 	patches.kernel.org/6.6.18-011-btrfs-don-t-drop-extent_map-for-free-space-ino.patch
 	patches.kernel.org/6.6.18-012-driver-core-Fix-device_link_flag_is_sync_state.patch
 	patches.kernel.org/6.6.18-013-selftests-landlock-Fix-fs_test-build-with-old-.patch
+	patches.kernel.org/6.6.18-014-KVM-selftests-Delete-superfluous-unused-stage-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
