--- a/series.conf
+++ b/series.conf
@@ -4019,6 +4019,7 @@
 	patches.kernel.org/6.6.18-315-x86-efi-Drop-EFI-stub-.bss-from-.data-section.patch
 	patches.kernel.org/6.6.18-316-x86-efi-Disregard-setup-header-of-loaded-image.patch
 	patches.kernel.org/6.6.18-317-x86-efi-Drop-alignment-flags-from-PE-section-h.patch
+	patches.kernel.org/6.6.18-318-x86-boot-Remove-the-bugger-off-message.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
