drm/amd/display: Fix MST Null Ptr for RV (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3871,6 +3871,7 @@
 	patches.kernel.org/6.6.18-167-drm-amd-display-Add-align-done-check.patch
 	patches.kernel.org/6.6.18-168-drm-prime-Support-page-array-4GB.patch
 	patches.kernel.org/6.6.18-169-drm-amdgpu-soc21-update-VCN-4-max-HEVC-encodin.patch
+	patches.kernel.org/6.6.18-170-drm-amd-display-Fix-MST-Null-Ptr-for-RV.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
