--- a/series.conf
+++ b/series.conf
@@ -3975,6 +3975,7 @@
 	patches.kernel.org/6.6.18-271-eventfs-Fix-kerneldoc-of-eventfs_remove_rec.patch
 	patches.kernel.org/6.6.18-272-eventfs-Remove-is_freed-union-with-rcu-head.patch
 	patches.kernel.org/6.6.18-273-eventfs-Have-a-free_ei-that-just-frees-the-eve.patch
+	patches.kernel.org/6.6.18-274-eventfs-Test-for-ei-is_freed-when-accessing-ei.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
