--- a/series.conf
+++ b/series.conf
@@ -3725,6 +3725,7 @@
 	patches.kernel.org/6.6.18-021-wifi-iwlwifi-uninitialized-variable-in-iwl_acp.patch
 	patches.kernel.org/6.6.18-022-ASoC-SOF-ipc3-topology-Fix-pipeline-tear-down-.patch
 	patches.kernel.org/6.6.18-023-net-handshake-Fix-handshake_req_destroy_test1.patch
+	patches.kernel.org/6.6.18-024-bonding-do-not-report-NETDEV_XDP_ACT_XSK_ZEROC.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
