tracefs: Zero out the tracefs_inode when allocating it (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -4004,6 +4004,7 @@
 	patches.kernel.org/6.6.18-300-eventfs-Use-kcalloc-instead-of-kzalloc.patch
 	patches.kernel.org/6.6.18-301-eventfs-Save-directory-inodes-in-the-eventfs_i.patch
 	patches.kernel.org/6.6.18-302-tracefs-remove-stale-update_gid-code.patch
+	patches.kernel.org/6.6.18-303-tracefs-Zero-out-the-tracefs_inode-when-alloca.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
