--- a/series.conf
+++ b/series.conf
@@ -3927,6 +3927,7 @@
 	patches.kernel.org/6.6.18-223-tools-rv-Fix-curr_reactor-uninitialized-variab.patch
 	patches.kernel.org/6.6.18-224-tools-rv-Fix-Makefile-compiler-options-for-cla.patch
 	patches.kernel.org/6.6.18-225-tools-rtla-Remove-unused-sched_getattr-functio.patch
+	patches.kernel.org/6.6.18-226-tools-rtla-Replace-setting-prio-with-nice-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
