--- a/series.conf
+++ b/series.conf
@@ -3993,6 +3993,7 @@
 	patches.kernel.org/6.6.18-289-tracefs-Check-for-dentry-d_inode-exists-in-set.patch
 	patches.kernel.org/6.6.18-290-eventfs-Fix-bitwise-fields-for-is_events.patch
 	patches.kernel.org/6.6.18-291-eventfs-Remove-lookup-parameter-from-create_di.patch
+	patches.kernel.org/6.6.18-292-eventfs-Stop-using-dcache_readdir-for-getdents.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
