--- a/series.conf
+++ b/series.conf
@@ -3739,6 +3739,7 @@
 	patches.kernel.org/6.6.18-035-selftests-forwarding-Suppress-grep-warnings.patch
 	patches.kernel.org/6.6.18-036-selftests-forwarding-Fix-bridge-locked-port-te.patch
 	patches.kernel.org/6.6.18-037-net-openvswitch-limit-the-number-of-recursions.patch
+	patches.kernel.org/6.6.18-038-lan966x-Fix-crash-when-adding-interface-under-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
