--- a/series.conf
+++ b/series.conf
@@ -3956,6 +3956,7 @@
 	patches.kernel.org/6.6.18-252-md-bypass-block-throttle-for-superblock-update.patch
 	patches.kernel.org/6.6.18-253-block-fix-partial-zone-append-completion-handl.patch
 	patches.kernel.org/6.6.18-254-netfilter-ipset-fix-performance-regression-in-.patch
+	patches.kernel.org/6.6.18-255-netfilter-ipset-Missing-gc-cancellations-fixed.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
