net: hsr: remove WARN_ONCE() in send_hsr_supervision_frame() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3831,6 +3831,7 @@
 	patches.kernel.org/6.6.18-127-ALSA-hda-realtek-Apply-headset-jack-quirk-for-.patch
 	patches.kernel.org/6.6.18-128-kbuild-Fix-changing-ELF-file-type-for-output-o.patch
 	patches.kernel.org/6.6.18-129-nfc-nci-free-rx_data_reassembly-skb-on-NCI-dev.patch
+	patches.kernel.org/6.6.18-130-net-hsr-remove-WARN_ONCE-in-send_hsr_supervisi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
