wifi: iwlwifi: fix double-free bug (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3906,6 +3906,7 @@
 	patches.kernel.org/6.6.18-202-nfp-use-correct-macro-for-LengthSelect-in-BAR-.patch
 	patches.kernel.org/6.6.18-203-nfp-enable-NETDEV_XDP_ACT_REDIRECT-feature-fla.patch
 	patches.kernel.org/6.6.18-204-nfp-flower-prevent-re-adding-mac-index-for-bon.patch
+	patches.kernel.org/6.6.18-205-wifi-iwlwifi-fix-double-free-bug.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
