tracing/probes: Fix to search structure fields correctly (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3853,6 +3853,7 @@
 	patches.kernel.org/6.6.18-149-tracing-synthetic-Fix-trace_string-return-valu.patch
 	patches.kernel.org/6.6.18-150-tracing-probes-Fix-to-show-a-parse-error-for-b.patch
 	patches.kernel.org/6.6.18-151-tracing-probes-Fix-to-set-arg-size-and-fmt-aft.patch
+	patches.kernel.org/6.6.18-152-tracing-probes-Fix-to-search-structure-fields-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
