--- a/series.conf
+++ b/series.conf
@@ -3825,6 +3825,7 @@
 	patches.kernel.org/6.6.18-121-drm-virtio-Set-segment-size-for-virtio_gpu-dev.patch
 	patches.kernel.org/6.6.18-122-drm-amdgpu-Reset-IH-OVERFLOW_CLEAR-bit.patch
 	patches.kernel.org/6.6.18-123-drm-amd-Don-t-init-MEC2-firmware-when-it-fails.patch
+	patches.kernel.org/6.6.18-124-lsm-fix-default-return-value-of-the-socket_get.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
