--- a/series.conf
+++ b/series.conf
@@ -3859,6 +3859,7 @@
 	patches.kernel.org/6.6.18-155-iio-magnetometer-rm3100-add-boundary-check-for.patch
 	patches.kernel.org/6.6.18-156-iio-core-fix-memleak-in-iio_device_register_sy.patch
 	patches.kernel.org/6.6.18-157-iio-commom-st_sensors-ensure-proper-DMA-alignm.patch
+	patches.kernel.org/6.6.18-158-iio-accel-bma400-Fix-a-compilation-problem.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
