--- a/series.conf
+++ b/series.conf
@@ -3788,6 +3788,7 @@
 	patches.kernel.org/6.6.18-084-interconnect-qcom-sc8180x-Mark-CO0-BCM-keepali.patch
 	patches.kernel.org/6.6.18-085-interconnect-qcom-sm8550-Enable-sync_state.patch
 	patches.kernel.org/6.6.18-086-media-ir_toy-fix-a-memleak-in-irtoy_tx.patch
+	patches.kernel.org/6.6.18-087-driver-core-fw_devlink-Improve-detection-of-ov.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
