--- a/series.conf
+++ b/series.conf
@@ -3958,6 +3958,7 @@
 	patches.kernel.org/6.6.18-254-netfilter-ipset-fix-performance-regression-in-.patch
 	patches.kernel.org/6.6.18-255-netfilter-ipset-Missing-gc-cancellations-fixed.patch
 	patches.kernel.org/6.6.18-256-parisc-Fix-random-data-corruption-from-excepti.patch
+	patches.kernel.org/6.6.18-257-Revert-eventfs-Do-not-allow-NULL-parent-to-eve.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
