ALSA: hda/conexant: Add quirk for SWS JS201D (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3897,6 +3897,7 @@
 	patches.kernel.org/6.6.18-193-io_uring-net-fix-multishot-accept-overflow-han.patch
 	patches.kernel.org/6.6.18-194-mmc-slot-gpio-Allow-non-sleeping-GPIO-ro.patch
 	patches.kernel.org/6.6.18-195-ALSA-hda-realtek-fix-mute-micmute-LED-For-HP-m.patch
+	patches.kernel.org/6.6.18-196-ALSA-hda-conexant-Add-quirk-for-SWS-JS201D.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
