update workarounds for gcc "asm goto" issue (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3703,6 +3703,7 @@
 	patches.kernel.org/6.6.17-126-Linux-6.6.17.patch
 	patches.kernel.org/af_unix-Fix-task-hung-while-purging-oob_skb-in-GC.patch
 	patches.kernel.org/6.6.18-001-work-around-gcc-bugs-with-asm-goto-with-output.patch
+	patches.kernel.org/6.6.18-002-update-workarounds-for-gcc-asm-goto-issue.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
