--- a/series.conf
+++ b/series.conf
@@ -3876,6 +3876,7 @@
 	patches.kernel.org/6.6.18-172-drm-amd-display-Preserve-original-aspect-ratio.patch
 	patches.kernel.org/6.6.18-173-hv_netvsc-Fix-race-condition-between-netvsc_pr.patch
 	patches.kernel.org/6.6.18-174-ring-buffer-Clean-ring_buffer_poll_wait-error-.patch
+	patches.kernel.org/6.6.18-175-net-dsa-mv88e6xxx-Fix-failed-probe-due-to-unsu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
