selftests: bridge_mdb: Use MDB get instead of dump (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3735,6 +3735,7 @@
 	patches.kernel.org/6.6.18-031-selftests-net-Fix-bridge-backup-port-test-flak.patch
 	patches.kernel.org/6.6.18-032-selftests-forwarding-Fix-layer-2-miss-test-fla.patch
 	patches.kernel.org/6.6.18-033-selftests-forwarding-Fix-bridge-MDB-test-flaki.patch
+	patches.kernel.org/6.6.18-034-selftests-bridge_mdb-Use-MDB-get-instead-of-du.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
