--- a/series.conf
+++ b/series.conf
@@ -3874,6 +3874,7 @@
 	patches.kernel.org/6.6.18-170-drm-amd-display-Fix-MST-Null-Ptr-for-RV.patch
 	patches.kernel.org/6.6.18-171-drm-amd-display-Increase-frame-larger-than-for.patch
 	patches.kernel.org/6.6.18-172-drm-amd-display-Preserve-original-aspect-ratio.patch
+	patches.kernel.org/6.6.18-173-hv_netvsc-Fix-race-condition-between-netvsc_pr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
