wifi: iwlwifi: mvm: fix a crash when we run out of stations (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3909,6 +3909,7 @@
 	patches.kernel.org/6.6.18-205-wifi-iwlwifi-fix-double-free-bug.patch
 	patches.kernel.org/6.6.18-206-wifi-cfg80211-fix-wiphy-delayed-work-queueing.patch
 	patches.kernel.org/6.6.18-207-wifi-mac80211-reload-info-pointer-in-ieee80211.patch
+	patches.kernel.org/6.6.18-208-wifi-iwlwifi-mvm-fix-a-crash-when-we-run-out-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
