devlink: Fix command annotation documentation (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3726,6 +3726,7 @@
 	patches.kernel.org/6.6.18-022-ASoC-SOF-ipc3-topology-Fix-pipeline-tear-down-.patch
 	patches.kernel.org/6.6.18-023-net-handshake-Fix-handshake_req_destroy_test1.patch
 	patches.kernel.org/6.6.18-024-bonding-do-not-report-NETDEV_XDP_ACT_XSK_ZEROC.patch
+	patches.kernel.org/6.6.18-025-devlink-Fix-command-annotation-documentation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
