--- a/series.conf
+++ b/series.conf
@@ -3898,6 +3898,7 @@
 	patches.kernel.org/6.6.18-194-mmc-slot-gpio-Allow-non-sleeping-GPIO-ro.patch
 	patches.kernel.org/6.6.18-195-ALSA-hda-realtek-fix-mute-micmute-LED-For-HP-m.patch
 	patches.kernel.org/6.6.18-196-ALSA-hda-conexant-Add-quirk-for-SWS-JS201D.patch
+	patches.kernel.org/6.6.18-197-ALSA-hda-realtek-add-IDs-for-Dell-dual-spk-pla.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
