--- a/series.conf
+++ b/series.conf
@@ -3777,6 +3777,7 @@
 	patches.kernel.org/6.6.18-073-HID-wacom-generic-Avoid-reporting-a-serial-of-.patch
 	patches.kernel.org/6.6.18-074-HID-wacom-Do-not-register-input-devices-until-.patch
 	patches.kernel.org/6.6.18-075-iio-hid-sensor-als-Return-0-for-HID_USAGE_SENS.patch
+	patches.kernel.org/6.6.18-076-usb-ucsi-Add-missing-ppm_lock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
