--- a/series.conf
+++ b/series.conf
@@ -3781,6 +3781,7 @@
 	patches.kernel.org/6.6.18-077-usb-ulpi-Fix-debugfs-directory-leak.patch
 	patches.kernel.org/6.6.18-078-usb-ucsi_acpi-Fix-command-completion-handling.patch
 	patches.kernel.org/6.6.18-079-USB-hub-check-for-alternate-port-before-enabli.patch
+	patches.kernel.org/6.6.18-080-usb-f_mass_storage-forbid-async-queue-when-shu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
