--- a/series.conf
+++ b/series.conf
@@ -3833,6 +3833,7 @@
 	patches.kernel.org/6.6.18-129-nfc-nci-free-rx_data_reassembly-skb-on-NCI-dev.patch
 	patches.kernel.org/6.6.18-130-net-hsr-remove-WARN_ONCE-in-send_hsr_supervisi.patch
 	patches.kernel.org/6.6.18-131-net-stmmac-do-not-clear-TBS-enable-bit-on-link.patch
+	patches.kernel.org/6.6.18-132-parisc-BTLB-Fix-crash-when-setting-up-BTLB-at-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
