selftests: net: Fix bridge backup port test flakiness (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3732,6 +3732,7 @@
 	patches.kernel.org/6.6.18-028-ALSA-hda-cs35l56-select-intended-config-FW_CS_.patch
 	patches.kernel.org/6.6.18-029-perf-CXL-fix-mismatched-cpmu-event-opcode.patch
 	patches.kernel.org/6.6.18-030-selftests-net-convert-test_bridge_backup_port..patch
+	patches.kernel.org/6.6.18-031-selftests-net-Fix-bridge-backup-port-test-flak.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
