mptcp: check addrs list in userspace_pm_get_local_id (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3814,6 +3814,7 @@
 	patches.kernel.org/6.6.18-110-selftests-mptcp-add-mptcp_lib_kill_wait.patch
 	patches.kernel.org/6.6.18-111-mptcp-drop-the-push_pending-field.patch
 	patches.kernel.org/6.6.18-112-mptcp-fix-rcv-space-initialization.patch
+	patches.kernel.org/6.6.18-113-mptcp-check-addrs-list-in-userspace_pm_get_loc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
