--- a/series.conf
+++ b/series.conf
@@ -3707,6 +3707,7 @@
 	patches.kernel.org/6.6.18-003-btrfs-add-and-use-helper-to-check-if-block-gro.patch
 	patches.kernel.org/6.6.18-004-btrfs-do-not-delete-unused-block-group-if-it-m.patch
 	patches.kernel.org/6.6.18-005-btrfs-forbid-creating-subvol-qgroups.patch
+	patches.kernel.org/6.6.18-006-btrfs-do-not-ASSERT-if-the-newly-created-subvo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
