--- a/series.conf
+++ b/series.conf
@@ -3924,6 +3924,7 @@
 	patches.kernel.org/6.6.18-220-ASoC-SOF-IPC3-fix-message-bounds-on-ipc-ops.patch
 	patches.kernel.org/6.6.18-221-ASoC-tas2781-add-module-parameter-to-tascodec_.patch
 	patches.kernel.org/6.6.18-222-ASoC-amd-yc-Add-DMI-quirk-for-Lenovo-Ideapad-P.patch
+	patches.kernel.org/6.6.18-223-tools-rv-Fix-curr_reactor-uninitialized-variab.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
