tracing/trigger: Fix to return error if failed to alloc snapshot (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3759,6 +3759,7 @@
 	patches.kernel.org/6.6.18-055-userfaultfd-fix-mmap_changing-checking-in-mfil.patch
 	patches.kernel.org/6.6.18-056-selftests-mm-ksm_tests-should-only-MADV_HUGEPA.patch
 	patches.kernel.org/6.6.18-057-scs-add-CONFIG_MMU-dependency-for-vfree_atomic.patch
+	patches.kernel.org/6.6.18-058-tracing-trigger-Fix-to-return-error-if-failed-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
