selftests: forwarding: Fix bridge MDB test flakiness (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3734,6 +3734,7 @@
 	patches.kernel.org/6.6.18-030-selftests-net-convert-test_bridge_backup_port..patch
 	patches.kernel.org/6.6.18-031-selftests-net-Fix-bridge-backup-port-test-flak.patch
 	patches.kernel.org/6.6.18-032-selftests-forwarding-Fix-layer-2-miss-test-fla.patch
+	patches.kernel.org/6.6.18-033-selftests-forwarding-Fix-bridge-MDB-test-flaki.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
