--- a/series.conf
+++ b/series.conf
@@ -3705,6 +3705,7 @@
 	patches.kernel.org/6.6.18-001-work-around-gcc-bugs-with-asm-goto-with-output.patch
 	patches.kernel.org/6.6.18-002-update-workarounds-for-gcc-asm-goto-issue.patch
 	patches.kernel.org/6.6.18-003-btrfs-add-and-use-helper-to-check-if-block-gro.patch
+	patches.kernel.org/6.6.18-004-btrfs-do-not-delete-unused-block-group-if-it-m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
