eventfs: Do not invalidate dentry in create_file/dir_dentry() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3982,6 +3982,7 @@
 	patches.kernel.org/6.6.18-278-eventfs-Remove-special-processing-of-dput-of-e.patch
 	patches.kernel.org/6.6.18-279-eventfs-Use-simple_recursive_removal-to-clean-.patch
 	patches.kernel.org/6.6.18-280-eventfs-Remove-expectation-that-ei-is_freed-me.patch
+	patches.kernel.org/6.6.18-281-eventfs-Do-not-invalidate-dentry-in-create_fil.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
