misc: fastrpc: Mark all sessions as invalid in cb_remove (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3845,6 +3845,7 @@
 	patches.kernel.org/6.6.18-141-ALSA-hda-cs8409-Suppress-vmaster-control-for-D.patch
 	patches.kernel.org/6.6.18-142-ALSA-hda-realtek-fix-mute-micmute-LEDs-for-HP-.patch
 	patches.kernel.org/6.6.18-143-binder-signal-epoll-threads-of-self-work.patch
+	patches.kernel.org/6.6.18-144-misc-fastrpc-Mark-all-sessions-as-invalid-in-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
