--- a/series.conf
+++ b/series.conf
@@ -3720,6 +3720,7 @@
 	patches.kernel.org/6.6.18-016-of-unittest-Fix-compile-in-the-non-dynamic-cas.patch
 	patches.kernel.org/6.6.18-017-drm-msm-gem-Fix-double-resv-lock-aquire.patch
 	patches.kernel.org/6.6.18-018-spi-imx-fix-the-burst-length-at-DMA-mode-and-C.patch
+	patches.kernel.org/6.6.18-019-KVM-selftests-Fix-a-semaphore-imbalance-in-the.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
