--- a/series.conf
+++ b/series.conf
@@ -3727,6 +3727,7 @@
 	patches.kernel.org/6.6.18-023-net-handshake-Fix-handshake_req_destroy_test1.patch
 	patches.kernel.org/6.6.18-024-bonding-do-not-report-NETDEV_XDP_ACT_XSK_ZEROC.patch
 	patches.kernel.org/6.6.18-025-devlink-Fix-command-annotation-documentation.patch
+	patches.kernel.org/6.6.18-026-of-property-Improve-finding-the-consumer-of-a-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
