nilfs2: fix data corruption in dsync block recovery for small block sizes (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3899,6 +3899,7 @@
 	patches.kernel.org/6.6.18-195-ALSA-hda-realtek-fix-mute-micmute-LED-For-HP-m.patch
 	patches.kernel.org/6.6.18-196-ALSA-hda-conexant-Add-quirk-for-SWS-JS201D.patch
 	patches.kernel.org/6.6.18-197-ALSA-hda-realtek-add-IDs-for-Dell-dual-spk-pla.patch
+	patches.kernel.org/6.6.18-198-nilfs2-fix-data-corruption-in-dsync-block-reco.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
