HID: bpf: remove double fdget() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3771,6 +3771,7 @@
 	patches.kernel.org/6.6.18-067-parisc-Prevent-hung-tasks-when-printing-invent.patch
 	patches.kernel.org/6.6.18-068-ALSA-hda-realtek-Fix-the-external-mic-not-bein.patch
 	patches.kernel.org/6.6.18-069-ALSA-hda-realtek-Enable-Mute-LED-on-HP-Laptop-.patch
+	patches.kernel.org/6.6.18-070-HID-bpf-remove-double-fdget.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
