eventfs: Fix WARN_ON() in create_file_dentry() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3969,6 +3969,7 @@
 	patches.kernel.org/6.6.18-265-eventfs-Use-ERR_CAST-in-eventfs_create_events_.patch
 	patches.kernel.org/6.6.18-266-eventfs-Fix-failure-path-in-eventfs_create_eve.patch
 	patches.kernel.org/6.6.18-267-tracefs-eventfs-Modify-mismatched-function-nam.patch
+	patches.kernel.org/6.6.18-268-eventfs-Fix-WARN_ON-in-create_file_dentry.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
