powerpc/pseries: fix accuracy of stolen time (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3886,6 +3886,7 @@
 	patches.kernel.org/6.6.18-182-ftrace-Fix-DIRECT_CALLS-to-use-SAVE_REGS-by-de.patch
 	patches.kernel.org/6.6.18-183-powerpc-64-Set-task-pt_regs-link-to-the-LR-val.patch
 	patches.kernel.org/6.6.18-184-powerpc-cputable-Add-missing-PPC_FEATURE_BOOKE.patch
+	patches.kernel.org/6.6.18-185-powerpc-pseries-fix-accuracy-of-stolen-time.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
