mptcp: fix rcv space initialization (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3813,6 +3813,7 @@
 	patches.kernel.org/6.6.18-109-selftests-mptcp-allow-changing-subtests-prefix.patch
 	patches.kernel.org/6.6.18-110-selftests-mptcp-add-mptcp_lib_kill_wait.patch
 	patches.kernel.org/6.6.18-111-mptcp-drop-the-push_pending-field.patch
+	patches.kernel.org/6.6.18-112-mptcp-fix-rcv-space-initialization.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
